[tool.poetry]
name = "cards"
version = "0.1.0" 
description = "A card management CLI tool"  
authors = ["Kanat"]
readme = "README.md"  

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
tinydb = "4.5.1"
typer = "0.3.2"
rich = "10.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
faker = "*"
tox = "*"
coverage = "*"
pytest-cov = "*"

[tool.poetry.scripts]
cards = "cards:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"